# dataware.urls

./: .pydevproject
monitor/SaveHistoryChromeExt/: manifest.json  typedUrls.html  typedUrls.js
monitor/nox/src/nox/netapps/monitorswitch/: Makefile.am  Makefile.in  control.cc  meta.json  monitorswitch.cc  monitorswitch.hh
pkg/: makepackage.sh
pkg/package_files/: postrm
src/dataware-urls/: DatawareDB.py  InstallationModule.py  ProcessingModule.py  ResourceDB.py  ResourceServer.py  config.cfg
src/dataware-urls/views/: header.tpl  home_page_template.tpl  url_data.tpl
